# rdfreader

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENCE.txt  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: codestyle.yml  publish.yml  test.yml
docs/: build_docs.sh  conf.py  index.rst
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_build/html/.doctrees/_sources/: modules.doctree  rdfreader.chem.doctree  rdfreader.doctree
docs/_build/html/_sources/: modules.html  rdfreader.chem.html  rdfreader.html
docs/_build/html/_sources/_sources/: rdfreader.chem.rst.txt
docs/_sources/: modules.rst  rdfreader.rst
rdfreader/: __init__.py  exceptions.py  rdf.py  write.py
rdfreader/chem/: mol.py  reaction.py  utils.py
rdfreader/parse/: molblock.py  rxnblock.py  utils.py
test/: conftest.py  test_chem_utils.py  test_molecule.py  test_parse_mol_block.py  test_parse_rxn_block.py  test_parse_utils.py  test_rdf.py  test_reaction.py  test_write.py
test/resources/: sample_datum_mol_block.txt  sample_datum_mol_block_parsed.txt  sample_datum_mol_block_processed.txt  sample_mol_block.txt  sample_rdf_first_rxn.rxn  sample_rxn_block.txt
