[tool.poetry]
name = "rdfreader"
# The version is currently managed by the github release workflow (see README), don't use.
version = "1.0.0"  
description = "Read the full contents of CTAB .rdf files in python. Captures RXN and MOL record using RDKit and reads additional data fields (including solvents/catalysts/agents)."
authors = ["deepmatter <enquiries@deepmatter.io>"]

[tool.poetry.dependencies]
python = "^3.9"
rdkit = "^2022.9.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pre-commit = "^2.20.0"
pytest-mock = "^3.10.0"
sphinx = "^6.2.1"


[build-system]
requires = ["poetry-core==1.0.4"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
