[tool.poetry]
name = "rdfreader"
version = "1.0.1"  
description = "Read the full contents of CTAB .rdf files in python. Captures RXN and MOL record using RDKit and reads additional data fields (including solvents/catalysts/agents)."
authors = ["deepmatter <enquiries@deepmatter.io>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/deepmatterltd/rdfreader/"
homepage = "https://www.deepmatter.io"
keywords = ["chemistry", "rdkit", "rdf", "rxn", "mol", "reaction", "molecule", "reader", "parser", "deepmatter", "ctab", "cheminformatics"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Chemistry",
]

[tool.poetry.dependencies]
python = "^3.9"
rdkit = "^2022.9.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pre-commit = "^2.20.0"
pytest-mock = "^3.10.0"
sphinx = "^6.2.1"
coverage = "^7.2.7"


[build-system]
requires = ["poetry-core==1.0.4"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"
